[package]
name = "camera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtp-rs = "0.6"
minreq = "2.11"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.3", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs"] }


